@@ -720,6 +720,13 @@ simulating/analyzing mass spectrometric data on a variety of polymers.
 - A Crossfading/Gapless Plugin for XMMS.
 </ul>
 
+<ul>
+<li><a href="http://wind.prohosting.com/pkiprj/">HushTones IM</a> -
+an IM client for Unix based platforms, packed with unmatched security features
+such as RSA Public Key encryption and IDEA encryption.
+</ul>
+
+
 
 <!-- COPY THESE LINES AND FILL IN TO ADD A NEW APP
 <ul>
