@@ -1,3 +1,7 @@
+2002-03-06  Damon Chaplin  <damon@ximian.com>
+
+	* apps.html: added HushTones IM.
+
 2002-02-26  Damon Chaplin  <damon@ximian.com>
 
 	* links.html: added SnapperPerl.
